# process_engine

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
process_engine/: hooks.py  modules.txt  patches.txt
process_engine/process_engine/doctype/prozess_aufgabe/: prozess_aufgabe.json  prozess_aufgabe.py
process_engine/process_engine/doctype/prozess_aufgabe_datei/: prozess_aufgabe_datei.json  prozess_aufgabe_datei.py
process_engine/process_engine/processes/: __init__.py  engine.py  path_resolver.py  task_registry.py  test_declared_outputs.py  test_derive_task.py  test_fill_fields.py  test_path_resolver.py  test_trigger_input_mapping.py  triggers.py
process_engine/public/css/: process_editor.css  process_editor_react.css  process_instance_react.css
process_engine/public/js/: dag_mermaid.js  derive_paths.js  fill_fields_picker.js  path_picker.js  pe_registry.js  process_editor.js  process_editor_react.bundle.js  process_instance_react.bundle.js  process_triggers.js
process_engine/src_react/: editor-edges.jsx  editor-shell.jsx  index.jsx  package.json
process_engine/src_react/example_widgets/: README.md
src_react/: CONTRACT_node_field_editing.md  INTEGRATION-INSTANCE.md  INTEGRATION.md  build.mjs  data.js  editor-edges.jsx  editor-node.jsx  editor-panels.jsx  editor-shell.jsx  index-instance.jsx  index.jsx  instance-data.js  instance-graph.jsx  instance-shell.jsx  instance-task-widgets.jsx  instance-tasks.jsx  instance.css  package-lock.json  styles.css
src_react/example_widgets/: print_format_picker.js
(+46 files in other folders)
